# cpp-itmo

./: README.md
HW01/: CMakeLists.txt  main.cpp
HW02/: CMakeLists.txt  Report.cpp  Report.h  main.cpp
HW03/: CMakeLists.txt  Makefile  Makefile2  bye.cpp  hello.cpp  here.cpp  main.cpp  myLib.h
HW05/: CMakeLists.txt  String.cpp  String.h  main.cpp
HW06/: CMakeLists.txt  ImpreciseNumber.cpp  ImpreciseNumber.h  main.cpp
HW07/: Array.cpp  Array.h  Array.hpp  CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
HW08/: Animal.cpp  Animal.h  Bear.cpp  Bear.h  CMakeLists.txt  Compare.hpp  ComplexFunction.hpp  IsSameObject.hpp  Man.cpp  Man.h  ManBearPig.cpp  ManBearPig.h  Pig.cpp  Pig.h  Unit.cpp  Unit.h  main.cpp
HW09/: Array.h  Array.hpp
HW10/: AverageDistance.cpp  AverageDistance.h  CMakeLists.txt  MaxDistance.cpp  MaxDistance.h  Metric.h  Point.cpp  Point.h  RandomAlgorithm.cpp  RandomAlgorithm.h  Route.h  RouteAlgorithm.cpp  RouteAlgorithm.h  SizeAlgorithm.cpp  SizeAlgorithm.h  SmartAlgorithm.cpp  SmartAlgorithm.h  SumDistance.cpp  SumDistance.h  config.in  main.cpp
HW11/: CMakeLists.txt  from_string.h  main.cpp
HW11/gtest/: gtest-all.cc  gtest_main.cc
